Try out another fix for code block scroll/wrapping

--- a/assets/index.css
+++ b/assets/index.css
@@ -163,8 +163,7 @@
 
   code,
   pre code {
-    @apply bg-gray-50 border border-gray-200 break-words overflow-y-auto py-1 px-2 rounded text-sm max-w-full whitespace-pre;
-    box-decoration-break: clone;
+    @apply bg-gray-50 border border-gray-200 overflow-y-auto py-1 px-2 rounded text-sm max-w-full whitespace-pre;
   }
 
   pre code {
